# awstui

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-01-awstui-implementation.md
docs/superpowers/specs/: 2026-04-01-awstui-design.md
src/awstui/: __init__.py  __main__.py  app.py  models.py  plugin.py
src/awstui/services/: __init__.py  ecr.py  glue.py  iam.py  lambda_.py  rds.py  s3.py  secrets_manager.py  sns.py  sqs.py
src/awstui/widgets/: detail_pane.py  filter_dialog.py  nav_tree.py  region_selector.py  tags_pane.py
tests/: test_app.py  test_models.py  test_nav_tree_filter.py  test_plugin.py  test_rainbow_csv.py
tests/test_services/: test_ecr.py  test_glue.py  test_iam.py  test_lambda.py  test_rds.py  test_s3.py  test_secrets_manager.py  test_sns.py  test_sqs.py
