[project]
name = "awstui"
version = "0.1"
description = "A read-only TUI for browsing AWS resources"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "textual>=3.0",
    "boto3>=1.35",
    "pyperclip>=1.9",
]

[project.urls]
Homepage = "https://github.com/jamiekt/awstui"
Repository = "https://github.com/jamiekt/awstui"
Issues = "https://github.com/jamiekt/awstui/issues"

[project.scripts]
awstui = "awstui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "textual-dev>=1.7",
]
