[project]
name = "awstui"
version = "0.6"
description = "A read-only TUI for browsing AWS resources"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=3.0",
    "boto3>=1.35",
    "pyperclip>=1.9",
]

[project.urls]
Homepage = "https://github.com/jamiekt/awstui"
Repository = "https://github.com/jamiekt/awstui"
Issues = "https://github.com/jamiekt/awstui/issues"

[project.scripts]
awstui = "awstui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*", "pyperclip"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "textual-dev>=1.7",
]
